# the_core

./: README.md  Untitled.ipynb  groq.py  main.py  pyproject.toml  systemprompt.py
