[project]
name = "the-core"
version = "0.1.0"
description = ""
authors = [
    {name = "deepraj",email = "deeprajd71@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "notebook (>=7.5.1,<8.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
